--- a/OrbitsInStronglyCurvedSpaceTime/readme
+++ b/OrbitsInStronglyCurvedSpaceTime/readme
@@ -1,6 +1,6 @@
 The PDF Orbits_in_strongly_Curved_Spacetime.pdf includes an overview of the application and physics used.
 
 Make sure that EinsteinPy, PyQt5, Numpy and Matplotlib are installed
--> Visual addition qdarkstyle: install using - 'pip install qdarkstyle'
+-> Visual addition qdarkstyle: install in your environment e.g. 'pip install qdarkstyle'
 
 Run main.py to run the program.
